--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
                 Kathmandu. I've done some projects. I have created a system called <strong>Aplliation of machine learning in Theft Detection.</strong>
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
+                Just a <strong>enthusiastic</strong> person. Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
